Added mobile view support

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #e6e6e6;
+}
+
 .App {
   text-align: center;
 }
@@ -7,15 +11,25 @@
   pointer-events: none;
 }
 
+.content-holder {
+  text-align: center;
+  width: 100%;
+}
+
 p {
-  color: #333;
-  font-size: 15px;
-  font-weight: bold;
+  color: #666;
+  font-size: 18px;
+  max-width: 50%;
+}
+
+p.about {
+  margin: 0 auto;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  line-height: 1.6;
 }
 
 .App-header {
-  background-color: #ededed;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,10 +41,20 @@ p {
 .App-link {
   color: #666;
   text-decoration: none;
+  font-family: "Courier New", Courier, monospace;
+  letter-spacing: 1px;
+  transition: all 0.2s ease;
+  font-weight: bold;
 }
 
 .App-link:hover {
   color: #00ccff;
+}
+
+hr {
+  height: 0;
+  border-top: 1px solid #dedede;
+  width: 70%;
 }
 
 @keyframes App-logo-spin {
@@ -39,5 +63,116 @@ p {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.circle {
+  position: fixed;
+  border-radius: 50%;
+  background: white;
+  animation: ripple 15s infinite;
+  box-shadow: 0px 0px 1px 0px #efefef;
+}
+
+.small {
+  width: 200px;
+  height: 200px;
+  left: -100px;
+  bottom: -100px;
+}
+
+.medium {
+  width: 400px;
+  height: 400px;
+  left: -200px;
+  bottom: -200px;
+}
+
+.large {
+  width: 600px;
+  height: 600px;
+  left: -300px;
+  bottom: -300px;
+}
+
+.xlarge {
+  width: 800px;
+  height: 800px;
+  left: -400px;
+  bottom: -400px;
+}
+
+.xxlarge {
+  width: 1000px;
+  height: 1000px;
+  left: -500px;
+  bottom: -500px;
+}
+
+.shade1 {
+  opacity: 0.2;
+}
+.shade2 {
+  opacity: 0.5;
+}
+
+.shade3 {
+  opacity: 0.7;
+}
+
+.shade4 {
+  opacity: 0.8;
+}
+
+.shade5 {
+  opacity: 0.9;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0.8);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(0.8);
+  }
+}
+
+p.desktop {
+  display: block;
+}
+
+p.mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 480px) {
+  .circle {
+    animation: none;
+    display: none;
+  }
+
+  p {
+    max-width: 100%;
+    padding: 16px;
+    font-size: 13px;
+  }
+
+  p.about {
+    font-size: 13px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+
+  p.desktop {
+    display: none;
+  }
+
+  p.mobile {
+    display: block;
   }
 }
